--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
+    <ion-title color="primary">
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,23 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-list>
+    <ion-item *ngFor="let c of componentes"
+              [routerLink]="c.redirectTo"
+              detail>  
+      <ion-icon [name]="c.icon" slot="start" color="primary"></ion-icon>
+      {{c.name}} 
+    </ion-item>
+  </ion-list>
+  
+  <!-- <ion-button routerLink="/alert">
+    Alert
+  </ion-button>
+
+  <ion-button routerLink="/action-sheet">
+    Action Sheet
+  </ion-button> -->
 
   <div id="container">
     <strong>Ready to create an app?</strong>
